--- a/inedx.html
+++ b/inedx.html
@@ -4,20 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
         <nav>
             <img src="logo-header.png" alt="">
             <ul>
-                <li>Accueil</li>
-                <li>Line up</li>
-                <li>Ticket</li>
-                <li>Calendrier</li>
-                <li>À propo</li>
+                <li><a href="">Accueil</a></li>
+                <li><a href="">Line up</a></li>
+                <li><a href="">Ticket</a></li>
+                <li><a href="">Calendrier</a></li>
+                <li><a href="">À propros</a></li>
             </ul>
             <section>
-                <h1>URBAN NIGTH<br>Rap Fest</br></h1>
+                <h1>URBAN NIGTH
+                <br>RAP FEST</br>
+            </h1>
                 <h2><strong>04 MAI & 05 MAI</strong><br>LYON - PARC DE GERLAND 7EME<br></h2>
                 <a href="">BILLETTERIE</a>  <a href="">PLUS D'INFO</a>
 
@@ -64,12 +67,41 @@ qu'un</p>
 help@raptureclouds.com with any questions or concerns.</p>
 <form>
     <div>
-        <label></label>
-        <input type="texte>"></input>
+        <label>Full Name</label>
+        <input type="Full Name>"></input>
     </div>
-    <button><a href="">CONCTACT</a></button>
+    <div>
+        <label>Email</label>
+        <input type="Email"></input>
+    </div>
+        <label>Phone</label>
+        <input type="Phone"></input>
+    </div>
+   
+    <label>Message</label>
+    <textarea>
+        <input type="Message"></input>
+    </textarea>
+</div>
+    <button><a href="">CONTACT</a></button>
 </form>
-        </section>
-    </main>
+</main>
+   
+<footer>
+            <div>
+                <p>Email</p>
+                <a href="">help@raptureclouds.com</a>
+            </div>
+            <form>
+                <label>Newsletter</label>
+                <input type="ton email"></input>
+                <button><a href="">SUBSCRIBE</a></button>
+            </form>
+            <div>
+                <p>Copyright © 2025 • Rapture - Music Festival</p>
+                <p>Terms & Conditions for Event • Privacy Policy • Terms of Use
+</p>
+            </div>
+        </footer>
 </body>
 </html>
