--- a/inedx.html
+++ b/inedx.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap%22 rel="
+        stylesheet">
 </head>
+
 <body>
     <header>
         <nav>
@@ -18,33 +25,43 @@
                 <li><a href="">À propros</a></li>
             </ul>
             <section>
-                <h1>URBAN NIGTH
-                <br>RAP FEST</br>
-            </h1>
-                <h2><strong>04 MAI & 05 MAI</strong><br>LYON - PARC DE GERLAND 7EME<br></h2>
-                <a href="">BILLETTERIE</a>  <a href="">PLUS D'INFO</a>
+                <div id="hero">
 
+                    <div class="titre">
+                        <h1>URBAN NIGTH<br><strong>RAP FEST</strong></br>
+                        </h1>
+                    <h2><strong>04 MAI & 05 MAI</strong>
+                        <br>LYON - PARC DE GERLAND 7EME<br>
+                    </h2>
+                    </div>
+                    
+                    <div class="button">
+                        <a href="" id="B">BILLETTERIE</a>
+                        <a href="" id="P">PLUS D'INFO</a>
+                    </div>
+                </div>
             </section>
         </nav>
     </header>
     <main>
-        <section>
-            <h2>Plongez au cœur du rythme urbain 
-avec RAPture, le festival de rap qui célèbre 
-la puissance des mots, des beats et des 
-cultures qui les inspirent.</h2>
-<p> Du 4 au 5 mai, vibrez au son des artistes les plus bouillants de la scène rap, entre 
-performances live, freestyles enflammés et rencontres inédites.
-RAPture, c'est plus qu'un festival, c'est une immersion dans l'essence du hip-hop : des flows 
-tranchants, des basses profondes et une énergie brute qui réunit toutes les générations.
-Sur scène, les talents montants côtoient les légendes, pour un week-end où chaque rime fait 
-écho aux histoires de la rue, des rêves et de la liberté d'expression.
-Venez vivre trois jours de pure intensité, là où la musique, la vibe et la culture rap ne font plus 
-qu'un</p>
+        <section id="presentation">
+            <div class="container" class="Sectionpadding">
+                <h2>Plongez au cœur du rythme urbain avec RAPture, le festival de rap qui célèbre la puissance des mots,
+                    des beats et des cultures qui les inspirent.</h2>
+                <p> Du 4 au 5 mai, vibrez au son des artistes les plus bouillants de la scène rap, entre performances
+                    live, freestyles enflammés et rencontres inédites. RAPture, c'est plus qu'un festival, c'est une
+                    immersion dans l'essence du hip-hop : des flows tranchants, des basses profondes et une énergie
+                    brute qui réunit toutes les générations.Sur scène, les talents montants côtoient les légendes, pour
+                    un week-end où chaque rime fait écho aux histoires de la rue, des rêves et de la liberté
+                    d'expression.Venez vivre trois jours de pure intensité, là où la musique, la vibe et la culture rap
+                    ne font plus qu'un</p>
+            </div>
         </section>
+
         <section>
-            <img src="section-img.png" alt="">
+            <!-- <img src="section-img.png"> -->
         </section>
+
         <section>
             <h2>LINE UP</h2>
             <ul>
@@ -58,50 +75,55 @@ qu'un</p>
                 <a href="">BILLETERIE</a>
             </ul>
         </section>
+
         <section>
-            <img src="spotify.png" alt=""> <img src="applemusic.png" alt=""> <img src="uber.png" alt=""> <img src="deezer.png" alt=""> <img src="motorola.png" alt="">
+            <img src="spotify.png" alt=""> <img src="applemusic.png" alt=""> <img src="uber.png" alt=""> <img
+                src="deezer.png" alt=""> <img src="motorola.png" alt="">
         </section>
+
         <section>
             <h2>CONTACTEZ NOUS</h2>
-            <p>Fill out the booking form below to ask any questions, or reach out to us directly at 
-help@raptureclouds.com with any questions or concerns.</p>
-<form>
-    <div>
-        <label>Full Name</label>
-        <input type="Full Name>"></input>
-    </div>
-    <div>
-        <label>Email</label>
-        <input type="Email"></input>
-    </div>
-        <label>Phone</label>
-        <input type="Phone"></input>
-    </div>
-   
-    <label>Message</label>
-    <textarea>
-        <input type="Message"></input>
-    </textarea>
-</div>
-    <button><a href="">CONTACT</a></button>
-</form>
-</main>
-   
-<footer>
-            <div>
-                <p>Email</p>
-                <a href="">help@raptureclouds.com</a>
-            </div>
+            <p>Fill out the booking form below to ask any questions, or reach out to us directly at
+                help@raptureclouds.com with any questions or concerns.</p>
             <form>
-                <label>Newsletter</label>
-                <input type="ton email"></input>
-                <button><a href="">SUBSCRIBE</a></button>
+                <div>
+                    <label>Full Name</label>
+                    <input type="Full Name>"></input>
+                </div>
+
+                <div>
+                    <label>Email</label>
+                    <input type="Email"></input>
+                </div>
+                <label>Phone</label>
+                <input type="Phone"></input>
+                </div>
+
+                <label>Message</label>
+
+                <textarea>
+        <input type="Message"></input>
+     </textarea>
+                </div>
+                <button><a href="">CONTACT</a></button>
             </form>
-            <div>
-                <p>Copyright © 2025 • Rapture - Music Festival</p>
-                <p>Terms & Conditions for Event • Privacy Policy • Terms of Use
-</p>
-            </div>
-        </footer>
+    </main>
+
+    <footer>
+        <div>
+            <p>Email</p>
+            <a href="">help@raptureclouds.com</a>
+        </div>
+        <form>
+            <label>Newsletter</label>
+            <input type="ton email"></input>
+            <button><a href="">SUBSCRIBE</a></button>
+        </form>
+        <div>
+            <p>Copyright © 2025 • Rapture - Music Festival</p>
+            <p>Terms & Conditions for Event • Privacy Policy • Terms of Use</p>
+        </div>
+    </footer>
 </body>
+
 </html>
